crates/stc_ts_file_analyzer/tests/errors/conformance/types/intersection/typeReadOnly/1.ts
interface Base {
    readonly value: number;
}

let base: Base;
base.value = 12 // error, lhs can't be a readonly property

